changes for enabling or disabling the the encoding of the urls

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NetworkConnection</string>
+    <string name="api_key">5fb6d918f1926240b59fc040268a3a3b</string>
 </resources>
